--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
-Django==5.0.3
 asgiref==3.7.2
+certifi==2025.6.15
+charset-normalizer==3.4.2
+dj-database-url==3.0.1
+django==5.0.3
 gunicorn==21.2.0
+idna==3.10
 packaging==23.2
 psycopg==3.1.18
 psycopg-binary==3.1.18
+requests==2.31.0
 sqlparse==0.4.4
-typing_extensions==4.10.0
-requests~=2.31.0
+typing-extensions==4.10.0
+urllib3==2.5.0
